conexão mysql. melhorias no front

--- a/landing_page_ultrassom/index.html
+++ b/landing_page_ultrassom/index.html
@@ -93,7 +93,7 @@
                     <div class="benefit-icon">
                         <i class="fas fa-share-alt"></i>
                     </div>
-                    <h3>Compartilhamento com a Família</h3>
+                    <h3>Compartilhar com a Família</h3>
                     <span class="benefit-subtitle">Surpreenda familiares e amigos com a primeira "foto" do bebê.</span>
                     <ul>
                         <!-- <li><strong>Surpreenda familiares e amigos</strong> com a primeira "foto" do bebê.</li> -->
